--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "php": "^7.4 | ^8.0",
         "nyholm/psr7": "^1.3",
         "psr/http-client": "^1.0",
-        "symfony/process": "^4.4.30 | ^5.0 |^6.0",
+        "symfony/process": "^4.4.30 | ^5.0 |^6.0 | ^7.0",
         "thecodingmachine/safe": "^1.0 | ^2.0",
         "webmozart/assert": "^1.11"
     },
